🔧 config: use personal taste

--- a/fly.toml
+++ b/fly.toml
@@ -1,18 +1,13 @@
-# fly.toml app configuration file generated for tailwings on 2023-05-23T23:44:58+02:00
+# fly.toml app configuration file generated for vepeen on 2023-05-23T23:44:58+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "tailwings"
-primary_region = "nrt"
+app = "vepeen"
 kill_signal = "SIGINT"
-kill_timeout = "5s"
 
 [env]
   PORT = "41641"
-  # create a reusable auth key and set it:
-  # flyctl secrets set TAILSCALE_AUTH_KEY=tskey-...
-  # ephemeral keys are hardly working for use as exit node as they are ipv6 only
 
 [[services]]
   protocol = "udp"
@@ -25,3 +20,7 @@ kill_timeout = "5s"
     type = "connections"
     hard_limit = 100
     soft_limit = 75
+
+[mounts]
+  source = "data"
+  destination = "/var"
