--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for vepeen on 2023-07-22T23:34:41+07:00
+# fly.toml app configuration file generated for vepeen on 2023-08-23T03:47:42+07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -6,6 +6,8 @@
 app = "vepeen"
 primary_region = "sin"
 kill_signal = "SIGINT"
+
+[build]
 
 [env]
   PORT = "41641"
