--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for vepeen on 2023-08-23T03:47:42+07:00
+# fly.toml app configuration file generated for vepeen on 2023-08-23T04:18:06+07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = "vepeen"
-primary_region = "sin"
+primary_region = "lhr"
 kill_signal = "SIGINT"
 
 [build]
