--- a/.github/workflows/auto-update-tailscale.yml
+++ b/.github/workflows/auto-update-tailscale.yml
@@ -23,10 +23,10 @@ jobs:
           fi
       - name: Commit and Push
         run: |
-          git config --global user.name "GitHub Action: auto update tailscale"
+          git config --global user.name "GitHub Action: Auto update Tailscale"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add Dockerfile
           if ! git diff-index --quiet HEAD; then
-            git commit -m "auto update tailscale version"
+            git commit -m "chore: auto update Tailscale version"
             git push
           fi
