--- a/.github/workflows/auto-update-tailscale.yml
+++ b/.github/workflows/auto-update-tailscale.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Get tailscale version and update Dockerfile
+      - name: Get Ttailscale version and update Dockerfile
         run: |
           current_version=$(head -n1 Dockerfile | sed -e "s/^ARG TSVERSION=//")
           latest_version=$(curl https://pkgs.tailscale.com/stable/ | grep tailscale_ -m 1 | cut -d'_' -f 2)
